log
Mon 06 May 2024 11:35:02 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
74f44ff
Mon 06 May 2024 11:39:13 PM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  5|7
total_score: 5/70
52236e2
Mon 06 May 2024 11:49:17 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:97:1: error: expected expression before ‘}’ token
   97 | }
      | ^
treemap.c:97:1: error: control reaches end of non-void function [-Werror=return-type]
   97 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6138e20
Mon 06 May 2024 11:49:25 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
3c4e9e1
Tue 07 May 2024 12:04:59 AM UTC: 
 treemap.c | 21 ++++++++++++++++-----
 1 file changed, 16 insertions(+), 5 deletions(-)
 tests:  5|7
total_score: 5/70
a824e47
Tue 07 May 2024 12:08:16 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
fb0e65e
Tue 07 May 2024 12:08:35 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  11|6
total_score: 15/70
3c3a647
Tue 07 May 2024 12:14:22 AM UTC: 
 treemap.c | 36 ++++++++++++++++++++++++++++++++++++
 1 file changed, 36 insertions(+)
 tests:  12|6
total_score: 15/70
337465b
Tue 07 May 2024 12:15:07 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
d08ec2a
Tue 07 May 2024 12:49:09 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|6
total_score: 15/70
68a2481
Tue 07 May 2024 12:49:18 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  12|6
total_score: 15/70
3197aab
Tue 07 May 2024 12:49:25 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  12|6
total_score: 15/70
89c3c57
Tue 07 May 2024 01:41:31 AM UTC: 
 treemap.c | 40 +++++++++++++++-------------------------
 1 file changed, 15 insertions(+), 25 deletions(-)
 tests:  13|5
total_score: 25/70
b6b5da8
Tue 07 May 2024 01:44:43 AM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
c9802e8
Tue 07 May 2024 02:00:51 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  16|4
total_score: 30/70
fc191fb
Tue 07 May 2024 02:11:09 AM UTC: 
 treemap.c | 31 +++++++++++++++++++++++++++++++
 1 file changed, 31 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:105:16: error: unused variable ‘parent’ [-Werror=unused-variable]
  105 |     TreeNode * parent = NULL;
      |                ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
595ed6d
Tue 07 May 2024 02:11:45 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|0
357ac00
Tue 07 May 2024 02:21:10 AM UTC: 
 treemap.c | 29 -----------------------------
 1 file changed, 29 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:104:16: error: unused variable ‘temp’ [-Werror=unused-variable]
  104 |     TreeNode * temp = tree->root;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
75d94a1
Tue 07 May 2024 02:21:16 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  16|4
total_score: 30/70
0c89841
Tue 07 May 2024 02:22:38 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:125:1: error: expected expression before ‘}’ token
  125 | }
      | ^
treemap.c:121:16: error: unused variable ‘hijo’ [-Werror=unused-variable]
  121 |     TreeNode * hijo;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
bc478bd
Tue 07 May 2024 02:25:07 AM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
9e1df44
Tue 07 May 2024 02:26:07 AM UTC: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|0
15b8f00
Tue 07 May 2024 02:26:23 AM UTC: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  17|4
total_score: 35/70
d324992
Tue 07 May 2024 02:27:35 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  19|3
total_score: 40/70
b7f81b7
Thu 09 May 2024 07:47:39 PM UTC: 
 treemap.c | 28 +++++++++++++---------------
 1 file changed, 13 insertions(+), 15 deletions(-)
 tests:  18|3
total_score: 35/70
47557eb
Thu 09 May 2024 07:49:21 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  18|3
total_score: 35/70
687b2bc
Thu 09 May 2024 07:53:00 PM UTC: 
 treemap.c | 21 +++++----------------
 1 file changed, 5 insertions(+), 16 deletions(-)
 tests:  0|0
fad4ff2
Thu 09 May 2024 07:53:22 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
9cf1267
Thu 09 May 2024 07:56:01 PM UTC: 
 treemap.c | 22 ++++++++--------------
 1 file changed, 8 insertions(+), 14 deletions(-)
 tests:  0|0
5b50863
Thu 09 May 2024 07:57:10 PM UTC: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
f1ac130
Thu 09 May 2024 07:57:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
40a17c7
Thu 09 May 2024 07:58:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8fe5a35
Thu 09 May 2024 07:59:26 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
3c4d4af
Thu 09 May 2024 08:00:55 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
aa8bb59
Thu 09 May 2024 08:10:37 PM UTC: 
 treemap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  23|2
total_score: 50/70
5fc20d2
Thu 09 May 2024 08:10:57 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f2b49cc
Thu 09 May 2024 08:11:49 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3c97bba
Thu 09 May 2024 08:12:09 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  23|2
total_score: 50/70
1ce66a7
Thu 09 May 2024 08:13:26 PM UTC: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  23|2
total_score: 50/70
245b94b
Thu 09 May 2024 08:14:50 PM UTC: 
 treemap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  25|1
total_score: 60/70
0b05e91
